Small comma change

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 			 		</div>
 			 		<div class="col-md-6">
 			 			<p><i>"Intriguing &#38; Sophisticated. Simply said, very helpful."</i></p>
-						<p class="reviewName">-Mac ZunYao freelance Musician</p>
+						<p class="reviewName">-Mac ZunYao, freelance Musician</p>
 			 		</div>
 			 		<div class="col-md-12">
 			 			<p><i>"Beautiful works, committed bunch of people"</i></p>
